[workspace]
resolver = "2"
members = [
    # Docs
    "packages/docsite",
    "packages/docs-router",

    # Playground
    "packages/playground/model",
    "packages/playground/runner",
    "packages/playground/server",
    "packages/playground/playground",
    "packages/playground/example-projects",

    # Include MDBook
    "packages/include_mdbook/packages/mdbook-macro",
    "packages/include_mdbook/packages/use-mdbook",
    "packages/include_mdbook/packages/mdbook-shared",
    "packages/include_mdbook/packages/syntect-html",
    "packages/include_mdbook/packages/mdbook-gen",
    "packages/include_mdbook/packages/mdbook-gen-example",

    # search
    "packages/search/search",
    "packages/search/search-macro",
    "packages/search/search-shared",
]
exclude = ["packages/playground/server/template"]

[workspace.dependencies]
dioxus_docs_router = { path = "packages/docs-router" }
stork-lib = { git = "https://github.com/dioxuslabs/stork", default-features = false }

# mdbook
mdbook-gen = { path = "packages/include_mdbook/packages/mdbook-gen" }
use-mdbook = { path = "packages/include_mdbook/packages/use-mdbook" }
mdbook-shared = { path = "packages/include_mdbook/packages/mdbook-shared" }
syntect-html = { path = "packages/include_mdbook/packages/syntect-html" }

# playground
model = { path = "packages/playground/model" }
dioxus-playground = { path = "packages/playground/playground" }
example-projects = { path = "packages/playground/example-projects" }

# search
dioxus-search = { path = "packages/search/search" }
dioxus-search-macro = { path = "packages/search/search-macro" }
dioxus-search-shared = { path = "packages/search/search-shared" }

# Dioxus Release
dioxus = "0.7.0-alpha.2"
dioxus-document = "0.7.0-alpha.2"
dioxus-core = "0.7.0-alpha.2"
dioxus-web = "0.7.0-alpha.2"
dioxus-router = "0.7.0-alpha.2"
dioxus-cli-config = "0.7.0-alpha.2"
dioxus-desktop = "0.7.0-alpha.2"
dioxus-liveview = "0.7.0-alpha.2"
dioxus-ssr = "0.7.0-alpha.2"
dioxus-core-types = "0.7.0-alpha.2"
dioxus-devtools = "0.7.0-alpha.2"
dioxus-rsx-hotreload = "0.7.0-alpha.2"
dioxus-rsx = "0.7.0-alpha.2"
dioxus-html = { version = "0.7.0-alpha.2", default-features = false }
dioxus-rsx-rosetta = "0.7.0-alpha.2"
dioxus-autofmt = "0.7.0-alpha.2"
dioxus-dx-wire-format = "0.7.0-alpha.2"
dioxus-logger = "0.7.0-alpha.2"

# 3rd-party dioxus
# dioxus-sdk = { version = "0.6", default-features = false }

getrandom = { version = "0.2" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.30"
uuid = "1.8.0"
gloo-net = { version = "0.6.0", features = ["websocket"] }
gloo-utils = "0.2.0"
axum = { version = "0.7.5" }
reqwest = { version = "0.12.12" }
thiserror = "2.0.4"
yazi = "0.2.1"
chrono = { version = "0.4.39" }
syn = "2.0.98"
console = "=0.15.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.web-dev]
inherits = "dev"
debug = 0
opt-level = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1


[patch.crates-io]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-lib = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-core = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-core-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-config-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-router-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-html = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-html-internal-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-hooks = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-interpreter-js = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-liveview = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-rsx = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-cli-config = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
generational-box = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus_server_macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-fullstack = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-autofmt = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-devtools = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
dioxus-devtools-types = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
manganis = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
manganis-core = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
manganis-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="97947b1" }
