[workspace]
resolver = "2"
members = [
    # Docs
    "packages/docsite",
    "packages/docs-03",
    "packages/docs-04",
    "packages/docs-05",
    "packages/docs-06",
    "packages/docs-07",
    "packages/docs-blog",
    "packages/docs-router",

    # Playground
    "packages/playground/model",
    "packages/playground/runner",
    "packages/playground/server",
    "packages/playground/playground",
    "packages/playground/example-projects",

    # Include MDBook
    "packages/include_mdbook/packages/mdbook-macro",
    "packages/include_mdbook/packages/use-mdbook",
    "packages/include_mdbook/packages/mdbook-shared",
    "packages/include_mdbook/packages/syntect-html",
    "packages/include_mdbook/packages/mdbook-gen",
    "packages/include_mdbook/packages/mdbook-gen-example",

    # search
    "packages/search/search",
    "packages/search/search-macro",
    "packages/search/search-shared",

    # Utilities
    "packages/notion-to-blog",
]
exclude = ["packages/playground/server/template"]

[workspace.dependencies]
dioxus-docs-03 = { path = "packages/docs-03" }
dioxus-docs-04 = { path = "packages/docs-04" }
dioxus-docs-05 = { path = "packages/docs-05" }
dioxus-docs-06 = { path = "packages/docs-06" }
dioxus-docs-07 = { path = "packages/docs-07" }
dioxus-docs-blog = { path = "packages/docs-blog" }
dioxus-docs-examples = { path = "packages/docs-router" }
stork-lib = { git = "https://github.com/dioxuslabs/stork", default-features = false }

# mdbook
mdbook-gen = { path = "packages/include_mdbook/packages/mdbook-gen" }
use-mdbook = { path = "packages/include_mdbook/packages/use-mdbook" }
mdbook-shared = { path = "packages/include_mdbook/packages/mdbook-shared" }
syntect-html = { path = "packages/include_mdbook/packages/syntect-html" }

# playground
model = { path = "packages/playground/model" }
dioxus-playground = { path = "packages/playground/playground" }
example-projects = { path = "packages/playground/example-projects" }

# search
dioxus-search = { path = "packages/search/search" }
dioxus-search-macro = { path = "packages/search/search-macro" }
dioxus-search-shared = { path = "packages/search/search-shared" }

# Dioxus Release
dioxus = "0.7.0-alpha.3"
dioxus-document = "0.7.0-alpha.3"
dioxus-core = "0.7.0-alpha.3"
dioxus-web = "0.7.0-alpha.3"
dioxus-router = "0.7.0-alpha.3"
dioxus-cli-config = "0.7.0-alpha.3"
dioxus-desktop = "0.7.0-alpha.3"
dioxus-liveview = "0.7.0-alpha.3"
dioxus-ssr = "0.7.0-alpha.3"
dioxus-core-types = "0.7.0-alpha.3"
dioxus-devtools = "0.7.0-alpha.3"
dioxus-rsx-hotreload = "0.7.0-alpha.3"
dioxus-rsx = "0.7.0-alpha.3"
dioxus-html = { version = "0.7.0-alpha.3", default-features = false }
dioxus-rsx-rosetta = "0.7.0-alpha.3"
dioxus-autofmt = "0.7.0-alpha.3"
dioxus-dx-wire-format = "0.7.0-alpha.3"
dioxus-logger = "0.7.0-alpha.3"

# 3rd-party dioxus
# dioxus-sdk = { version = "0.6", default-features = false }

getrandom = { version = "0.2" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.30"
uuid = "1.8.0"
gloo-net = { version = "0.6.0", features = ["websocket"] }
gloo-utils = "0.2.0"
axum = { version = "0.8" }
reqwest = { version = "0.12.12" }
thiserror = "2.0.4"
yazi = "0.2.1"
chrono = { version = "0.4.39" }
syn = "2.0.98"
console = "=0.15.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.web-dev]
inherits = "dev"
debug = 0
panic = "abort"

[profile.release.build-override]
opt-level = 3
codegen-units = 1


[patch.crates-io]
# dioxus = { path = "../dioxus/packages/dioxus" }
# dioxus-lib = { path = "../dioxus/packages/dioxus-lib" }
# dioxus-core = { path = "../dioxus/packages/core" }
# dioxus-core-macro = { path = "../dioxus/packages/core-macro" }
# dioxus-config-macro = { path = "../dioxus/packages/config-macro" }
# dioxus-router = { path = "../dioxus/packages/router" }
# dioxus-router-macro = { path = "../dioxus/packages/router-macro" }
# dioxus-html = { path = "../dioxus/packages/html" }
# dioxus-html-internal-macro = { path = "../dioxus/packages/html-internal-macro" }
# dioxus-hooks = { path = "../dioxus/packages/hooks" }
# dioxus-web = { path = "../dioxus/packages/web" }
# dioxus-ssr = { path = "../dioxus/packages/ssr" }
# dioxus-desktop = { path = "../dioxus/packages/desktop" }
# dioxus-interpreter-js = { path = "../dioxus/packages/interpreter" }
# dioxus-liveview = { path = "../dioxus/packages/liveview" }
# dioxus-rsx = { path = "../dioxus/packages/rsx" }
# dioxus-signals = { path = "../dioxus/packages/signals" }
# dioxus-cli-config = { path = "../dioxus/packages/cli-config" }
# generational-box = { path = "../dioxus/packages/generational-box" }
# dioxus_server_macro = { path = "../dioxus/packages/server-macro" }
# dioxus-fullstack = { path = "../dioxus/packages/fullstack" }
# dioxus-autofmt = { path = "../dioxus/packages/autofmt" }
# dioxus-devtools = { path = "../dioxus/packages/devtools" }
# dioxus-devtools-types = { path = "../dioxus/packages/devtools-types" }
# manganis = { path = "../dioxus/packages/manganis/manganis" }
# manganis-core = { path = "../dioxus/packages/manganis/manganis-core" }
# manganis-macro = { path = "../dioxus/packages/manganis/manganis-macro" }

# dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-lib = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-core = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-core-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-config-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-router = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-router-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-html = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-html-internal-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-hooks = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-interpreter-js = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-liveview = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-rsx = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-cli-config = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# generational-box = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus_server_macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-fullstack = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-autofmt = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-devtools = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# dioxus-devtools-types = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# manganis = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# manganis-core = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
# manganis-macro = { git = "https://github.com/dioxuslabs/dioxus", rev ="e00ebec8048d8ca934fff918d2d1432bf6ce7640" }
