[package]
name = "example-projects"
version = "0.1.0"
edition = "2021"

[dependencies]
include_dir = "0.7.3"
once_cell = "1.17.1"
miniz_oxide = { version = "0.8.0", features = ["std"] }
base64 = "0.22.1"
anyhow = "1.0.95"
uuid = { workspace = true, features = [ "v3", "serde"] }

[dev-dependencies]
dioxus = { workspace = true, features = ["web"] }
