[package]
name = "mdbook-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = "1.0.109"
mdbook-shared = { path = "../mdbook-shared" }
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
macro_state = "0.2.0"
convert_case = "0.6.0"
postcard = { version = "1.0.4", features = ["use-std"] }
dioxus-rsx = { path = "../../dioxus/packages/rsx" }
pulldown-cmark = "0.9.3"
