[package]
name = "mdbook-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.18"
memchr = "2.5.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
