[package]
name = "mdbook-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.18"
memchr = "2.5.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
instant-distance = { version = "0.6.1", features = ["with-serde"] }
llm = { git = "https://github.com/rustformers/llm", rev = "60d6168", optional = true }
reqwest = { version = "0.11.18", features = ["blocking"], optional = true }
spinoff = { version = "0.7.0", optional = true }

[features]
build_embeddings = ["llm", "reqwest", "spinoff"]
