[package]
name = "mdbook-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.18"
memchr = "2.5.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
stork-lib = { version = "1.6.0", features = ["build-v3"], default-features = false }
bytes = { version = "1.3.0", features = ["serde"] }
slab = "0.4.8"

[features]
