[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
serde = { workspace = true }

# Server only
dioxus-dx-wire-format = { workspace = true, optional = true }
axum = { workspace = true, features = ["ws"], optional = true}

# Web only
gloo-net = { workspace = true, optional = true }

[features]
server = ["dep:dioxus-dx-wire-format", "dep:axum"]
web = ["dep:gloo-net"]
