[package]
name = "dioxus-search-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
stork-lib = { version = "1.6.0", features = ["build-v3"], default-features = false }
bytes = { version = "1.3.0", features = ["serde"] }
slab = "0.4.8"
dioxus-router = { version = "0.6.0" }
yazi = "0.1.5"
scraper = "0.17.1"
log = "0.4.19"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
