[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true }
dioxus-logger = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

axum = { version = "0.7.5", features = ["http2", "ws", "macros"] }
fs_extra = "1.3.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["futures-util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
