[package]
name = "use-mdbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mdbook-macro = { path = "../mdbook-macro" }
mdbook-shared = { path = "../mdbook-shared" }
once_cell = "1.17.2"
postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
yazi = "0.1.5"

[dev-dependencies]
dioxus = { git = "https://github.com/Demonthos/dioxus", branch = "router-typesafe" }
dioxus-router = { git = "https://github.com/Demonthos/dioxus", branch = "router-typesafe" }
