[package]
name = "dioxus-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true, features = ["web"] }
dioxus-logger = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
gloo-net = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Dioxus
dioxus = { workspace = true, features = ["web"] }
dioxus-document = { workspace = true }
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk", rev = "refs/pull/57/head", features = [
    "window_size",
    "timing",
    "system_theme",
] }

gloo-utils = "0.2.0"
wasm-bindgen = "0.2.95"
miniz_oxide = { version = "0.8.0", features = ["std"] }
base64 = "0.22.1"

# Hot reload / Paste as RSX
dioxus-core = "0.6.0-rc.0"
dioxus-core-types = "0.6.0-rc.0"
dioxus-devtools = "0.6.0-rc.0"
dioxus-rsx-hotreload = "0.6.0-rc.0"
dioxus-rsx = "0.6.0-rc.0"
dioxus-html = { version = "0.6.0-rc.0", features = [
    "hot-reload-context",
], default-features = false }
dioxus-rsx-rosetta = "0.6.0-rc.0"
dioxus-autofmt = "0.6.0-rc.0"

syn = "2.0.85"
proc-macro2 = "1.0.89"
