# This excludes the template from the rest of the workspaces.
[workspace]

[package]
name = "{BUILD_ID}"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { path = "../../dioxus/packages/dioxus", features = ["web"] }
dioxus-web = { path = "../../dioxus/packages/web", features = ["devtools-playground"] }

[profile.dev]
opt-level = 3
